Modify log methods, modify properties and path management